--- a/src/components/HomePosts/HomePosts.module.scss
+++ b/src/components/HomePosts/HomePosts.module.scss
@@ -11,7 +11,7 @@ ul {
   justify-content: flex-start;
   list-style-type: none;
   animation: fadeIn 0.5s;
-  height: 80vh;
+  height: 100vh;
   overflow-y: visible;
   left: 17vw;
   border-radius: 0px;
@@ -26,15 +26,14 @@ ul {
     flex-direction: column;
     align-items: center;
     border-radius: 7px;
-    margin-right: 30px;
     border: solid white;
-    width: 65vw;
-
+    width: 61vw;
+    margin-left: 2.5vw;
     section {
       display: flex;
       justify-content: space-between;
       height: 5vh;
-      width: 65vw;
+      width: 61vw;
       align-items: center;
 
       h1 {
@@ -67,7 +66,7 @@ ul {
     }
     h3 {
       margin-top: 0;
-      width: 65vw;
+      width: 61vw;
       display: flex;
       justify-content: flex-start;
       background-color: gray;
@@ -75,19 +74,21 @@ ul {
       font-size: 10vmin;
       overflow: hidden;
       border-radius: 0px;
-      height: 60vh;
+      height: 50vh;
+
+      display: block;
     }
     .postImage {
       margin-top: 0;
-      width: 65vw;
-      height: 60vh;
+      width: 61vw;
+      height: 50vh;
+
+      display: block;
     }
     .postImage:hover {
       cursor: pointer;
     }
     h3:hover {
-      transition: 0.1s;
-      border-radius: 7px;
       cursor: pointer;
     }
     .bottomSection {
@@ -99,10 +100,11 @@ ul {
         display: flex;
         justify-content: space-between;
         align-items: center;
-        border-top: solid 1px black;
-        margin-top: -10vh;
-        width: 65vw;
+
+        margin-top: 0vh;
+        width: 61vw;
         height: 5vh;
+        background-color: white;
         p {
           display: flex;
           justify-content: flex-start;
@@ -146,10 +148,11 @@ ul {
         align-self: center;
         border-radius: 7px;
         padding: 2.5px;
-        width: 60vw;
+        width: 61vw;
         height: 5vh;
         border-radius: 3px;
-        margin-top: 10px;
+        margin-top: 80px;
+        background-color: white;
         box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
       }
       footer:hover {
@@ -160,9 +163,6 @@ ul {
     }
   }
   li:hover {
-    padding: 4px;
-    transition: 0.1s;
-    border-radius: 7px;
   }
 }
 
@@ -257,78 +257,82 @@ ul {
 
 @media (max-width: 900px) {
   ul {
-    top: 5vh;
-    width: 90vw;
-    left: 0;
-    height: 100vh;
+    left: 1vw;
+    top: 35vh;
+    width: 98vw;
     li {
-      border: none;
-      border-radius: 0px;
-      width: 95vw;
-      margin-right: 10vw;
-
+      width: 90vw;
+      margin-left: 10vw;
       section {
-        width: 95vw;
+        width: 89vw;
+        display: flex;
+        justify-content: space-between;
+
         h1 {
+          width: 33%;
+          font-size: medium;
+          overflow-x: hidden;
+          display: flex;
+          justify-content: flex-end;
         }
         h2 {
-          padding-left: 10px;
+          overflow-x: hidden;
+          display: flex;
+          justify-content: center;
+
+          width: 33%;
+          font-size: medium;
         }
         .forumTitle {
-          text-shadow: none;
-          color: white;
+          overflow-x: hidden;
+          display: flex;
+          justify-content: center;
+
+          width: 33%;
+          font-size: medium;
+        }
+        h1:hover,
+        .forumTitle:hover,
+        h2:hover {
         }
       }
       h3 {
-        border: none;
-        width: 95vw;
-        height: 60vh;
+        width: 89vw;
       }
       .postImage {
-        width: 95vw;
+        width: 89vw;
       }
       .postImage:hover {
-        cursor: pointer;
       }
       h3:hover {
       }
-      aside {
-        width: 98vw;
-        margin-top: 0;
-        border-top: solid 1px white;
+      .bottomSection {
+        width: 89vw;
         .pDiv {
-          width: 98vw;
+          width: 89vw;
+
+          margin-top: 0.5vh;
           p {
           }
           p:hover {
             color: white;
-            background-color: #ff6410;
           }
           .date {
+          }
+          .date:hover,
+          .comment:hover {
           }
           .likes,
           .dislikes,
           .comment {
           }
           .likes:hover,
-          .dislikes:hover,
-          .comment:hover {
-            cursor: pointer;
-            background-color: #ff6410;
-            border-radius: 7px;
-            color: white;
-          }
-          .date:hover {
-            background-color: rgb(28, 28, 28);
-            color: white;
+          .dislikes:hover {
           }
         }
         footer {
-          width: 90vw;
         }
         footer:hover {
-          background-color: #ff6410;
-          color: white;
         }
       }
     }
