--- a/src/components/LoginForm/LoginForm.module.scss
+++ b/src/components/LoginForm/LoginForm.module.scss
@@ -1,23 +1,26 @@
 .loginDiv {
+  width: 30vw;
+  height: 80vh;
+  top: 25vh;
   position: fixed;
-  right: 0;
-  width: 50vw;
-  height: 100vh;
+  border-radius: 3px;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
-  font-size: 1vmin;
+  z-index: 10;
+  box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px,
+    rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+  animation: fadeInAndUp cubic-bezier(0.82, 0.9, 1, 1.08) 0.9s;
   color: black;
-  animation: fadeIn 2s;
+  background-color: white;
+
   .title {
     justify-self: center;
     font-family: "Orbitron", sans-serif;
     font-size: 50px;
     display: flex;
-
     align-items: center;
-
+    border-radius: 3px;
     p {
       margin-top: 0;
     }
@@ -29,8 +32,9 @@
     }
   }
   .loginForm {
-    height: 50vh;
-    width: 25vw;
+    background-color: white;
+    height: 30vw;
+    width: 20vw;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -40,14 +44,14 @@
     }
     .inputText {
       font-family: "Gruppo", sans-serif;
-      color: white;
+      color: black;
       height: 20px;
       background-color: white;
-      border-width: 1px;
-      border-color: black;
-      border-radius: 7px;
+      border: solid 1px white;
+      border-radius: 3px;
       box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset,
         rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
+      font-size: 10px;
     }
     .submit {
       font-size: 1.5vmin;
@@ -57,15 +61,17 @@
       justify-content: center;
       width: 10vw;
       font-family: "Gruppo", sans-serif;
-      box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px,
-        rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
       border-color: white;
       height: 20px;
       color: black;
       margin-top: 1vmin;
+      margin-left: 1vmin;
       padding-bottom: 0.8vmin;
       padding-top: 0.8vmin;
       margin-bottom: 10vmin;
+      box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px,
+        rgba(0, 0, 0, 0.3) 0px 7px 13px -3px,
+        rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
     }
     .submit:hover {
       background-color: rgb(170, 218, 250);
@@ -74,8 +80,9 @@
   .signupButton {
     display: flex;
     justify-content: center;
-    width: 100vw;
     font-size: 1.5vmin;
+    position: absolute;
+    top: 65vh;
   }
   .signupButton:hover {
     color: rgb(170, 218, 250);
@@ -85,16 +92,38 @@
 
 @media (max-width: 900px) {
   .loginDiv {
-    top: 20vh;
-    width: 100vw;
-    height: 100vh;
-    background-color: white;
-    .loginForm {
-      width: 70vw;
+    width: 40vw;
+    height: 90vh;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+    .text {
+      background-color: white;
+      width: 40vw;
+      align-self: flex-start;
     }
-    .signupButton,
-    .errorMessage {
-      margin: 5px;
+    .title {
+      .buttonDiv {
+        p {
+          width: 40vw;
+        }
+      }
+    }
+    form {
+      h3 {
+        background-color: white;
+        width: 40vw;
+        display: flex;
+        justify-content: center;
+        font-size: 20px;
+      }
+    }
+    .signupButton {
+      display: flex;
+      justify-content: center;
+      width: 40vw;
+      top: 55vh;
       font-size: 20px;
     }
   }
@@ -124,6 +153,33 @@
 @keyframes fadeIn {
   0% {
     opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes fadeInAndUp {
+  0% {
+    opacity: 0.2;
+    transform: translateY(50px);
+  }
+  20% {
+    opacity: 0.4;
+    transform: translateY(40px);
+  }
+  40% {
+    opacity: 0.6;
+    transform: translateY(30px);
+  }
+  60% {
+    opacity: 0.8;
+    transform: translateY(20px);
+  }
+  80% {
+    opacity: 0.8;
+    transform: translateY(10px);
   }
 
   100% {
