--- a/src/components/SignUpForm/SignUpForm.module.scss
+++ b/src/components/SignUpForm/SignUpForm.module.scss
@@ -1,157 +1,168 @@
 .signUpFormDiv {
-    width: 50vw;
-    height: 50vw;
+  width: 30vw;
+  height: 80vh;
+  top: 25vh;
+  position: fixed;
+  border-radius: 3px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  animation: fadeInAndUp cubic-bezier(0.82, 0.9, 1, 1.08) 0.9s;
+  box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px,
+    rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+  background-color: white;
+  h3 {
+    margin-top: 10px;
+    margin-bottom: 10px;
+    font-size: 15px;
+  }
+  .title {
+    justify-self: center;
+    font-family: "Orbitron", sans-serif;
+    position: fixed;
+    font-size: 2.5vmin;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    p {
+      margin-top: 0;
+      font-size: 20px;
+    }
+
+    .buttonDiv {
+      width: 25vw;
+
+      display: flex;
+      flex-direction: row;
+    }
+  }
+
+  .signUpForm {
+    border-radius: 3px;
+    top: 0;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
 
+    .text {
+      font-size: 20px;
+      font-family: "Gruppo", sans-serif;
+    }
+
+    .inputText {
+      font-family: "Gruppo", sans-serif;
+      color: black;
+      height: 20px;
+      width: 20vw;
+      background-color: white;
+      border-radius: 3px;
+      border: solid 1px white;
+      box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset,
+        rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
+    }
+
+    .submit {
+      font-size: 1.5vmin;
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: center;
+      width: 10vw;
+
+      border-color: white;
+      height: 20px;
+      color: black;
+      margin-top: 1vmin;
+      padding-bottom: 0.8vmin;
+      padding-top: 0.8vmin;
+      margin-bottom: 10vmin;
+      box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px,
+        rgba(0, 0, 0, 0.3) 0px 7px 13px -3px,
+        rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+    }
+
+    .submit:hover {
+      background-color: rgb(170, 218, 250);
+    }
+  }
+
+  .signupButton {
+    display: flex;
+    justify-content: center;
+    width: 100vw;
+    font-size: 1.5vmin;
+  }
+
+  .signupButton:hover {
+    color: rgb(170, 218, 250);
+  }
+}
+
+@media (max-width: 900px) {
+  .signUpFormDiv {
+    width: 40vw;
+  }
+}
+
+@media (prefers-color-scheme: dark) {
+  .signUpFormDiv {
+    color: white;
 
     .title {
-        justify-self: center;
-        font-family: 'Orbitron', sans-serif;
-        position: fixed;
-        top: 20vh;
-        font-size: 2.5vmin;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
+      p {
+      }
 
-        p {
-            margin-top: 0;
-            font-size: 20px;
-        }
-
-        .buttonDiv {
-            width: 25vw;
-
-            display: flex;
-            flex-direction: row;
-        }
+      .buttonDiv {
+      }
     }
 
     .signUpForm {
-        top: 0;
-        height: 50vh;
-        width: 50vw;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: flex-start;
+      .text {
+      }
 
-        padding-left: 20vw;
+      .inputText {
+      }
 
-        .text {
-            font-size: 20px;
-            font-family: 'Gruppo', sans-serif;
+      .submit {
+      }
 
-
-        }
-
-        .inputText {
-
-            background-color: green;
-            font-family: 'Gruppo', sans-serif;
-            color: black;
-            height: 20px;
-            width: 25vw;
-            background-color: white;
-            border-width: 1px;
-            border-color: black;
-            border-radius: 7px;
-            box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
-
-        }
-
-        .submit {
-            font-size: 1.5vmin;
-            display: flex;
-            flex-direction: row;
-            align-items: center;
-            justify-content: center;
-            width: 10vw;
-            font-family: 'Gruppo', sans-serif;
-            box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
-            border-color: white;
-            height: 20px;
-            color: black;
-            margin-top: 1vmin;
-            padding-bottom: 0.8vmin;
-            padding-top: 0.8vmin;
-            margin-bottom: 10vmin;
-
-
-        }
-
-        .submit:hover {
-            background-color: rgb(170, 218, 250);
-            ;
-        }
+      .submit:hover {
+      }
     }
 
     .signupButton {
-        display: flex;
-        justify-content: center;
-        width: 100vw;
-        font-size: 1.5vmin;
     }
 
     .signupButton:hover {
-        color: rgb(170, 218, 250);
-        ;
     }
+  }
 }
 
-@media (max-width:900px) {
-    .signUpFormDiv {
+@keyframes fadeInAndUp {
+  0% {
+    opacity: 0.2;
+    transform: translateY(50px);
+  }
+  20% {
+    opacity: 0.4;
+    transform: translateY(40px);
+  }
+  40% {
+    opacity: 0.6;
+    transform: translateY(30px);
+  }
+  60% {
+    opacity: 0.8;
+    transform: translateY(20px);
+  }
+  80% {
+    opacity: 0.8;
+    transform: translateY(10px);
+  }
 
-        width: 100vw;
-        display: flex;
-        justify-content: center;
-
-        .signUpForm {
-
-            display: flex;
-            justify-content: center;
-            width: 100vw;
-            padding: none;
-
-            .inputText {
-
-                width: 70vw;
-            }
-        }
-    }
-}
-
-@media(prefers-color-scheme:dark) {
-    .signUpFormDiv {
-
-
-        color: white;
-        .title {
-            p {}
-
-            .buttonDiv {}
-        }
-
-        .signUpForm {
-
-
-            .text {}
-
-            .inputText {}
-
-            .submit {
-
-            }
-
-            .submit:hover {}
-        }
-
-        .signupButton {}
-
-        .signupButton:hover {}
-    }
-
+  100% {
+    opacity: 1;
+  }
 }
