--- a/src/pages/ForumPage/ForumPage.module.scss
+++ b/src/pages/ForumPage/ForumPage.module.scss
@@ -48,8 +48,6 @@
       justify-content: center;
       width: 100vw;
       margin-top: 10px;
-      //   border-top: solid 1px black;
-      //   border-bottom: solid 1px black;
       aside {
         background-color: rgb(171, 211, 246);
         box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset,
@@ -159,7 +157,6 @@
 
         .pDiv {
           display: flex;
-          border-top: solid 1px black;
           width: 68vw;
           p {
             width: 25%;
@@ -236,27 +233,70 @@
       }
       section {
         display: flex;
-        justify-content: center;
-
-        button {
-          margin: 10px;
+        justify-content: flex-start;
+        aside {
+          width: 90vw;
+          button {
+            margin: 10px;
+          }
         }
       }
     }
-    ul {
-      width: 80vw;
-      height: 100vh;
-      overflow-y: scroll;
-      box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset,
-        rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
-      border-radius: 7px;
-      padding: 50px;
-
-      li {
-        width: 90vw;
-        padding-right: 0;
+    .postsList {
+      width: 90vw;
+      left: -20px;
+      .post {
+        li:hover {
+        }
+        section {
+          width: 90vw;
+          border-top-right-radius: 3px;
+          border-top-left-radius: 3px;
+          h1 {
+          }
+          h2 {
+            width: 90vw;
+            display: flex;
+            justify-content: center;
+            font-size: 20px;
+            overflow-x: hidden;
+          }
+        }
         h3 {
-          width: 85vw;
+          width: 90vw;
+        }
+        .postImage {
+          width: 90vw;
+        }
+        .postText {
+          width: 90vw;
+        }
+        aside {
+          width: 90vw;
+          display: flex;
+          align-items: center;
+          .pDiv {
+            display: flex;
+            align-items: center;
+            font-size: 15px;
+            width: 90vw;
+            justify-content: center;
+            margin-top: 20px;
+            p {
+              width: 33%;
+            }
+            p:hover {
+            }
+            .date {
+              display: none;
+              width: 0px;
+              height: 0px;
+            }
+            .date:hover {
+            }
+          }
+          footer {
+          }
         }
       }
     }
