--- a/src/pages/HomePage/HomePage.module.scss
+++ b/src/pages/HomePage/HomePage.module.scss
@@ -12,19 +12,22 @@
   }
 
   .buttonDiv {
-    top: 10vmin;
+    top: 15vmin;
     margin-right: 2.5vw;
-    width: 20vw;
+    width: 15vw;
     height: 100vh;
-    left: 82vw;
+    left: 83vw;
     list-style-type: none;
-    border-radius: 0px;
+    border-radius: 3px;
     box-shadow: none;
     display: flex;
     position: absolute;
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
+    box-shadow: rgba(105, 105, 107, 0.25) 0px 30px 60px -12px inset,
+      rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
+    padding: 10px;
     li {
       display: flex;
       justify-content: center;
@@ -126,7 +129,7 @@
       width: 14vw;
       height: 50vh;
       border: none;
-      border-radius: 0px;
+      border-radius: 3px;
       overflow-y: scroll;
 
       li {
@@ -138,7 +141,7 @@
         margin-left: 2.5vw;
         width: 13vw;
         border: solid 1px white;
-        border-radius: 0px;
+        border-radius: 3px;
       }
       .userForums:-webkit-scrollbar {
         display: none;
@@ -205,7 +208,9 @@
 
     .buttonDiv {
       top: 20vh;
-      width: 100vw;
+      width: 90vw;
+      margin-left: 5vw;
+      border-radius: 3px;
       height: 15vw;
       left: 0;
       flex-direction: row;
