--- a/src/pages/OtherUserPage/OtherUserPage.module.scss
+++ b/src/pages/OtherUserPage/OtherUserPage.module.scss
@@ -1,19 +1,16 @@
 .OtherUserPage {
   position: absolute;
-  top: 33px;
   width: 100vw;
   height: 98vh;
   display: flex;
   justify-content: center;
   align-items: flex-start;
-
   .wrong {
     height: 100vh;
     width: 100vw;
   }
   section {
     width: 80vw;
-    margin-top: 5vh;
     height: 90vh;
     border-radius: 7px;
 
@@ -273,18 +270,31 @@
 @media (max-width: 900px) {
   .OtherUserPage {
     section {
+      width: 100vw;
       header {
+        width: 98vw;
         .profilePic {
         }
 
         h6 {
+          height: 10vh;
+          width: 10vh;
         }
 
         aside {
+          height: 10vh;
+          width: 10vh;
         }
 
         .interactions {
+          height: 10vh;
+          width: 10vh;
+          display: flex;
+          flex-direction: column;
+          justify-content: space-around;
           p {
+            width: 90%;
+            font-size: 10px;
           }
 
           p:hover {
@@ -293,19 +303,27 @@
       }
 
       div {
+        width: 100vw;
         .post {
+          width: 95vw;
           header {
+            width: 95vw;
+            border-bottom: none;
           }
 
           .postImage {
+            width: 95vw;
           }
 
           h5 {
+            width: 95vw;
           }
 
           section {
+            width: 95vw;
             p {
-              margin-left: 10p;
+              font-size: 11px;
+              width: 25%;
             }
 
             p:hover {
