--- a/src/components/LoginForm/LoginForm.module.scss
+++ b/src/components/LoginForm/LoginForm.module.scss
@@ -13,7 +13,10 @@
   animation: fadeInAndUp cubic-bezier(0.82, 0.9, 1, 1.08) 0.9s;
   color: black;
   background-color: white;
-
+  h3 {
+    display: flex;
+    justify-content: center;
+  }
   .title {
     justify-self: center;
     font-family: "Orbitron", sans-serif;
@@ -34,12 +37,13 @@
   .loginForm {
     background-color: white;
     height: 30vw;
-    width: 20vw;
+    width: 30vw;
     display: flex;
     flex-direction: column;
     justify-content: center;
     .text {
       font-size: 20px;
+      padding-left: 55px;
       font-family: "Gruppo", sans-serif;
     }
     .inputText {
@@ -52,6 +56,8 @@
       box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset,
         rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
       font-size: 10px;
+      width: 20vw;
+      align-self: center;
     }
     .submit {
       font-size: 1.5vmin;
@@ -65,13 +71,13 @@
       height: 20px;
       color: black;
       margin-top: 1vmin;
-      margin-left: 1vmin;
       padding-bottom: 0.8vmin;
       padding-top: 0.8vmin;
       margin-bottom: 10vmin;
       box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px,
         rgba(0, 0, 0, 0.3) 0px 7px 13px -3px,
         rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+      margin-left: 60px;
     }
     .submit:hover {
       background-color: rgb(170, 218, 250);
@@ -93,38 +99,37 @@
 @media (max-width: 900px) {
   .loginDiv {
     width: 40vw;
-    height: 90vh;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: flex-start;
-    .text {
-      background-color: white;
-      width: 40vw;
-      align-self: flex-start;
-    }
     .title {
+      p {
+      }
       .buttonDiv {
-        p {
-          width: 40vw;
-        }
       }
     }
-    form {
+    .loginForm {
+      margin-top: 50px;
+      width: 30vw;
+      display: flex;
       h3 {
-        background-color: white;
+        align-self: flex-start;
         width: 40vw;
+        margin-left: -20px;
         display: flex;
         justify-content: center;
-        font-size: 20px;
+      }
+      .text {
+      }
+      .inputText {
+        width: 20vw;
+      }
+      .submit {
+      }
+      .submit:hover {
       }
     }
     .signupButton {
-      display: flex;
-      justify-content: center;
-      width: 40vw;
-      top: 55vh;
       font-size: 20px;
+    }
+    .signupButton:hover {
     }
   }
 }
