--- a/src/components/SignUpForm/SignUpForm.module.scss
+++ b/src/components/SignUpForm/SignUpForm.module.scss
@@ -45,7 +45,6 @@
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
-
     .text {
       font-size: 20px;
       font-family: "Gruppo", sans-serif;
@@ -57,10 +56,11 @@
       height: 20px;
       width: 20vw;
       background-color: white;
-      border-radius: 3px;
       border: solid 1px white;
+      border-radius: 3px;
       box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset,
         rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
+      font-size: 10px;
     }
 
     .submit {
@@ -103,6 +103,8 @@
 @media (max-width: 900px) {
   .signUpFormDiv {
     width: 40vw;
+    h3 {
+    }
   }
 }
 
