--- a/src/pages/ForumPage/ForumPage.module.scss
+++ b/src/pages/ForumPage/ForumPage.module.scss
@@ -100,6 +100,7 @@
         rgba(0, 0, 0, 0.3) 0px 7px 13px -3px,
         rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
       height: 80vh;
+      width: 100%;
       margin-bottom: 15px;
       border-radius: 7px;
       li:hover {
@@ -124,14 +125,12 @@
         }
       }
       .postImage {
-        overflow: hidden;
-        background-size: contain;
         width: 70vw;
         height: 60vh;
         display: flex;
         justify-content: center;
         align-items: center;
-        margin-right: 0;
+        margin-left: 2vw;
       }
       .postText {
         margin-top: 0;
