changing color scheme

--- a/src/components/LoginForm/LoginForm.module.scss
+++ b/src/components/LoginForm/LoginForm.module.scss
@@ -1,5 +1,5 @@
 .loginDiv {
-  width: 30vw;
+  width: 35vw;
   height: 80vh;
   top: 25vh;
   position: fixed;
@@ -8,11 +8,10 @@
   flex-direction: column;
   align-items: center;
   z-index: 10;
-  box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px,
-    rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
   animation: fadeInAndUp cubic-bezier(0.82, 0.9, 1, 1.08) 0.9s;
-  color: black;
-  background-color: white;
+  color: white;
+  background-color: rgb(23, 23, 23);
+  border: solid 1px white;
   h3 {
     display: flex;
     justify-content: center;
@@ -35,14 +34,14 @@
     }
   }
   .loginForm {
-    background-color: pink;
+    background-color: rgb(23, 23, 23);
     height: 30vw;
     width: 30vw;
     display: flex;
     flex-direction: column;
     justify-content: center;
     .text {
-      background-color: orange;
+      background-color: rgb(23, 23, 23);
       font-size: 20px;
       padding-left: 55px;
       font-family: "Gruppo", sans-serif;
@@ -79,6 +78,7 @@
         rgba(0, 0, 0, 0.3) 0px 7px 13px -3px,
         rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
       margin-left: 60px;
+      background-color: white;
     }
     .submit:hover {
       background-color: rgb(170, 218, 250);
