--- a/src/components/Logout/Logout.module.scss
+++ b/src/components/Logout/Logout.module.scss
@@ -8,6 +8,7 @@
   align-items: center;
   right: 0px;
   top: 2px;
+  height: 100%;
   //box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
 }
 
@@ -27,9 +28,5 @@
   .LogOut {
   }
   .LogOut:hover {
-    border-radius: 4px;
-    background-color: #ff6410;
-    cursor: pointer;
-    color: white;
   }
 }
