--- a/src/components/SignUpForm/SignUpForm.module.scss
+++ b/src/components/SignUpForm/SignUpForm.module.scss
@@ -1,7 +1,7 @@
 .signUpFormDiv {
   width: 30vw;
   height: 80vh;
-  top: 25vh;
+  top: 30vh;
   position: fixed;
   border-radius: 3px;
   display: flex;
@@ -10,7 +10,7 @@
   animation: fadeInAndUp cubic-bezier(0.82, 0.9, 1, 1.08) 0.9s;
   box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px,
     rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
-  background-color: white;
+  background-color: rgb(23, 23, 23);
   h3 {
     margin-top: 10px;
     margin-bottom: 10px;
