--- a/src/components/UserPosts/UserPosts.module.scss
+++ b/src/components/UserPosts/UserPosts.module.scss
@@ -1,6 +1,6 @@
 .UserPosts {
   height: 90vh;
-  border-radius: 7px;
+
   top: 10vh;
   animation: fadeIn 0.5s;
   overflow-y: scroll;
@@ -14,6 +14,7 @@
   align-items: center;
   width: 70vw;
   z-index: 3;
+  background-color: black;
   .yourPosts {
     display: flex;
     justify-content: center;
@@ -25,7 +26,6 @@
 
   li {
     //animation: fadeIn 1s;
-    border-radius: 7px;
     height: 60vh;
     margin-top: 20px;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px,
@@ -35,6 +35,8 @@
     justify-content: flex-start;
     width: 65vw;
     padding-bottom: 1vh;
+    background-color: rgb(23, 23, 23);
+    color: white;
     section {
       display: flex;
       justify-content: space-between;
@@ -126,7 +128,7 @@
       }
       footer {
         align-self: center;
-        border-radius: 7px;
+
         padding: 2.5px;
         border: none;
         width: 50vw;
