--- a/src/pages/UserPage/UserPage.module.scss
+++ b/src/pages/UserPage/UserPage.module.scss
@@ -5,7 +5,7 @@
   top: 32px;
   align-items: center;
   height: 100vh;
-  background-color: white;
+  background-color: rgb(23, 23, 23);
   background-size: cover;
 
   // background-image: url('../../assets/iosBackgrounds/iosMain.jpg');
@@ -22,6 +22,8 @@
     -moz-background-clip: text;
     background-clip: text;
     text-shadow: 0px 3px 3px rgba(255, 255, 255, 0.5);
+    border-top: white 1px solid;
+    border-bottom: white 1px solid;
   }
 }
 
