login page changed

--- a/src/components/Logout/Logout.module.scss
+++ b/src/components/Logout/Logout.module.scss
@@ -13,10 +13,8 @@
 }
 
 .LogOut:hover {
-  border-radius: 4px;
-  background-color: rgb(180, 217, 247);
   cursor: pointer;
-  color: white;
+  color: aquamarine;
 }
 @media (max-width: 900px) {
   .LogOut {
