--- a/src/components/LoginForm/LoginForm.module.scss
+++ b/src/components/LoginForm/LoginForm.module.scss
@@ -12,6 +12,7 @@
   color: white;
   background-color: rgb(23, 23, 23);
   border: solid 1px white;
+  background-color: pink;
   h3 {
     display: flex;
     justify-content: center;
@@ -34,7 +35,7 @@
     }
   }
   .loginForm {
-    background-color: rgb(23, 23, 23);
+    background-color: orange;
     height: 30vw;
     width: 30vw;
     display: flex;
