--- a/src/pages/LoginPage/LoginPage.module.scss
+++ b/src/pages/LoginPage/LoginPage.module.scss
@@ -1,125 +1,108 @@
 .LoginPage {
   display: flex;
-  flex-direction: column;
-  left: 0;
-  width: 100vw;
-  color: white;
   justify-content: center;
   align-items: center;
-  background-size: cover;
-  height: 95.1vh;
-  position: absolute;
-  top: 5vh;
-  background-color: rgb(23, 23, 23);
-  h1 {
+  height: 96vh;
+  max-height: 3000px;
+  width: 100vw;
+  //max-width: 1940px;
+  margin: 0 auto;
+  color: white;
+  background-color: black;
+  .leftSide {
+    width: 50%;
+    height: 100%;
     display: flex;
     justify-content: center;
+    flex-direction: column;
+    .logoDiv {
+      height: 15vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 45px;
+      .logo {
+        width: 100px;
+        height: 100px;
+      }
+    }
+    .loginForm,
+    .signUpForm {
+      height: 50vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column;
+      p,
+      .inputText,
+      .submit {
+        width: 40%;
+        margin-top: 10px;
+        border-radius: 5px;
+        max-width: 500px;
+        background-color: black;
+        color: white;
+      }
+      .submit:hover {
+        color: aquamarine;
+      }
+      .text {
+        font-weight: 700;
+      }
+      .inputText {
+        color: white;
+        border: solid 1px white;
+        font-size: 15px;
+        padding: 3px;
+        padding-right: 3px;
+        padding-left: 3px;
+        border-radius: 0px;
+      }
+    }
+    .signupButton {
+      height: 15vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+    .signupButton:hover {
+      cursor: pointer;
+      color: aquamarine;
+    }
+  }
+  .rightSide {
+    width: 50%;
+    height: 100%;
+    display: flex;
     align-items: center;
-    position: absolute;
-    top: 5vh;
-    width: 100vw;
-    height: 10vh;
-    font-size: 10vh;
-    color: rgb(180, 217, 247);
-    z-index: 100;
-  }
-}
-
-@keyframes fadeIn1 {
-  0% {
-    opacity: 0;
-  }
-
-  100% {
-    opacity: 1;
-  }
-}
-
-@keyframes fadeIn3 {
-  0% {
-    opacity: 0;
-  }
-
-  100% {
-    opacity: 1;
-  }
-}
-
-@keyframes fadeIn3 {
-  0% {
-    opacity: 0;
-  }
-
-  100% {
-    opacity: 1;
+    justify-content: center;
   }
 }
 
 @media (max-width: 900px) {
   .LoginPage {
-    display: flex;
-    flex-direction: column;
-    height: 30vh;
-    position: absolute;
-    top: 5vh;
-    background-image: url("../../assets/cascades/c2.jpg");
-    height: 100vh;
-    width: 100vw;
-    .title {
-      display: flex;
-      flex-direction: column;
-    }
-
-    h1 {
-      display: flex;
-      flex-direction: row;
-
-      width: 100vw;
-      margin-top: 0;
-    }
   }
 }
 
-@media (prefers-color-scheme: dark) {
-  .LoginPage {
-    color: #ff6410;
-    background-color: rgb(28, 28, 28);
-    background-image: none;
-    background-size: cover;
+// @media (prefers-color-scheme: dark) {
+//   .LoginPage {
+//     color: #ff6410;
+//     background-color: rgb(28, 28, 28);
+//     background-image: none;
+//     background-size: cover;
 
-    h2 {
-      color: #ff6410;
-    }
+//     h2 {
+//       color: #ff6410;
+//     }
 
-    .title {
-      color: white;
-    }
+//     .title {
+//       color: white;
+//     }
 
-    h1 {
-      p {
-        color: #ff6410;
-      }
-    }
-  }
-}
-
-@keyframes typing {
-  from {
-    width: 100%;
-  }
-
-  to {
-    width: 0;
-  }
-}
-
-@keyframes blink-caret {
-  from,
-  to {
-    border-color: transparent;
-  }
-
-  50% {
-    border-color: #000;
-  }
-}
+//     h1 {
+//       p {
+//         color: #ff6410;
+//       }
+//     }
+//   }
+// }
