updated user page

--- a/src/components/HomePosts/HomePosts.module.scss
+++ b/src/components/HomePosts/HomePosts.module.scss
@@ -15,6 +15,7 @@ ul {
   overflow-y: visible;
   left: 17vw;
   border-radius: 3px;
+  background-color: red;
 
   li {
     background-color: white;
