--- a/src/components/SearchBar/SearchBar.module.scss
+++ b/src/components/SearchBar/SearchBar.module.scss
@@ -2,20 +2,21 @@
   position: absolute;
   width: 100vw;
   height: 50px;
-  top: 7vmin;
   display: flex;
   justify-content: center;
   .form {
-    width: 60vw;
+    width: 50vw;
+    max-width: 600px;
     display: flex;
     align-items: center;
     input {
-      border-radius: 3px;
-      height: 30px;
+      background-color: black;
+      color: white;
+      height: 40px;
       width: 60vw;
-      box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset,
-        rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
-      border: solid 1px white;
+      margin-top: 10px;
+      padding: 5px;
+      border-radius: 5px;
     }
     button {
       display: flex;
@@ -23,43 +24,48 @@
       align-items: center;
       margin-left: 10px;
       align-self: center;
-      height: 30px;
+      height: 40px;
       width: 10vw;
-      border-radius: 3px;
-      box-shadow: rgba(0, 0, 0, 0.4) 0px 1px 2px,
-        rgba(0, 0, 0, 0.3) 0px 3px 7px -1px,
-        rgba(0, 0, 0, 0.2) 0px -1px 0px inset;
+      color: white;
+      padding: 5px;
+      border-radius: 5px;
+      margin-top: 10px;
     }
     button:hover {
-      color: white;
-      cursor: pointer;
-      background-color: rgb(180, 217, 247);
+      color: aquamarine;
+      border: 1px solid white;
     }
   }
   section {
     position: absolute;
     width: 100vw;
-    top: 7vh;
-
-    height: 100vh;
+    top: 50px;
+    height: 5vh;
     display: flex;
     flex-direction: column;
     align-items: center;
+
     .searchList {
       position: absolute;
-      width: 50vw;
-      left: 20vw;
+      width: 45vw;
+      left: 26vw;
+      max-width: 700px;
       z-index: 10;
       background-color: white;
-      border-bottom: solid 1px black;
-      border-left: solid 1px black;
-      border-right: solid 1px black;
-      border-radius: 3px;
+
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
       aside {
+        background-color: black;
+        width: 100%;
+        padding: 3px;
+        color: white;
+        border-top: solid 1px white;
       }
       aside:hover {
-        background-color: rgb(180, 217, 247);
-        color: white;
+        background-color: aquamarine;
       }
     }
     .searchList:hover {
@@ -68,28 +74,23 @@
   }
 }
 
-@media (prefers-color-scheme: dark) {
-  .SearchBar {
-    .form {
-      input {
-      }
-      button {
-        border-radius: 7px;
-        color: white;
-        border-color: none;
-        border: none;
-        background-color: #ff6410;
-      }
-      button:hover {
-        background-color: #983f10;
-      }
-    }
-    .searchResultsList {
-      .searchResults {
-      }
-    }
-  }
-}
+// @media (prefers-color-scheme: dark) {
+//   .SearchBar {
+//     .form {
+//       input {
+//       }
+//       button {
+//       }
+//       button:hover {
+//         background-color: #983f10;
+//       }
+//     }
+//     .searchResultsList {
+//       .searchResults {
+//       }
+//     }
+//   }
+// }
 
 @media (max-width: 900px) {
   .SearchBar {
