--- a/src/pages/HomePage/HomePage.module.scss
+++ b/src/pages/HomePage/HomePage.module.scss
@@ -1,361 +1,222 @@
 .HomePage {
   width: 100vw;
-  //background-color: rgb(227,211,166);
-  //background-image: url('../../assets/iosBackgrounds/iosMain.jpg');
-  top: 32px;
-  animation: fadeIn 1s;
-  h4 {
-    color: black;
-    font-size: 20px;
-    padding-left: 15px;
-    padding-right: 15px;
+  display: flex;
+  justify-content: space-evenly;
+  background-color: rgb(28, 28, 28);
+  #logo {
+    min-width: 50px;
+    max-width: 3vw;
   }
-
-  .buttonDiv {
-    top: 15vmin;
-    margin-right: 2.5vw;
-    width: 15vw;
-    height: 100vh;
-    left: 83vw;
-    list-style-type: none;
-    border-radius: 3px;
-    box-shadow: none;
+  .userInfo,
+  .homePosts,
+  .explore {
+    margin-top: 7vh;
     display: flex;
-    position: absolute;
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
-    box-shadow: rgba(105, 105, 107, 0.25) 0px 30px 60px -12px inset,
-      rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
-    padding: 10px;
-    li {
+
+    h1 {
+      background-color: #ff6410;
+      width: 15vw;
+      color: white;
       display: flex;
       justify-content: center;
-      width: 12vw;
-      margin: 2px;
-      color: black;
-      height: 50px;
-      background-color: white;
       align-items: center;
-      border-radius: 0;
+      font-size: 25px;
+      font-weight: 500;
     }
   }
-
-  button {
-    margin-top: 10px;
-    width: 12.5vw;
-    height: 50px;
-    position: relative;
-    color: black;
-    background-color: white;
-    border-color: white;
-    margin-bottom: 10px;
-    align-self: center;
-    box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px,
-      rgba(0, 0, 0, 0.3) 0px 7px 13px -3px,
-      rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
-  }
-  button:hover {
-    background-color: rgb(180, 217, 247);
-    color: white;
-    cursor: pointer;
-  }
-
-  #name {
-    margin-top: 30px;
-
-    display: flex;
-    justify-content: flex-start;
-    position: fixed;
-    padding-left: 2.5vw;
-    padding-right: 2.5vw;
-    color: black;
-    font-size: 25px;
-
-    top: 3vmin;
-    border-radius: 7px;
-    z-index: 1;
-  }
-
-  .hidden {
-    animation: fadeIn 2s;
-  }
-
   .userInfo {
+    width: 15vw;
+    height: 60vh;
+
+    background-color: black;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    align-items: center;
-    left: 0;
-    position: absolute;
-    width: 15vw;
-    margin-left: 2vw;
-    height: 90vh;
-    height: 100vh;
-    top: 10vmin;
-    .userPic {
-      border-radius: 100px;
+
+    .profilePic {
+      margin-top: 10px;
+      width: 8vw;
+      height: 8vw;
+      border-radius: 100%;
+      border: solid 1px white;
+    }
+    .userForums {
+      margin-top: 10px;
+      width: 100%;
+      height: 40%;
       display: flex;
       justify-content: center;
-      align-items: center;
-      width: 10vw;
-      height: 10vw;
-      overflow: hidden;
-      box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px,
-        rgba(0, 0, 0, 0.3) 0px 7px 13px -3px,
-        rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
-      border: solid 1px white;
-      img {
-        width: 10vw;
-        height: 10vw;
-      }
-    }
-    .userPic:hover {
-      cursor: pointer;
-    }
-
-    .username {
-      margin: 10px;
-      display: flex;
       flex-direction: column;
       align-items: center;
-    }
-
-    .userForums {
-      left: 0;
-      margin-top: 20vh;
-      padding: 10px;
-
-      width: 14vw;
-      height: 50vh;
-      border: none;
-      border-radius: 3px;
-      overflow-y: scroll;
-
-      li {
+      h2 {
+        color: white;
+        width: 100%;
         display: flex;
         justify-content: center;
         align-items: center;
-        color: black;
-        height: 20vh;
-        margin-left: 2.5vw;
-        width: 13vw;
-        border: solid 1px white;
-        border-radius: 3px;
-      }
-      .userForums:-webkit-scrollbar {
-        display: none;
-      }
-      li:hover {
-        cursor: pointer;
-      }
-      .forumTitles {
-      }
-    }
-  }
-  .bottomDiv {
-    position: absolute;
-    height: 5vh;
-    width: 100vw;
-    top: 100vh;
-
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    section {
-      width: 10%;
-      margin-left: 5px;
-      margin-right: 5px;
-      height: 100%;
-      display: flex;
-      flex-direction: column;
-      align-items: flex-start;
-      h6 {
-        background-color: white;
-        height: 25px;
-        font-size: 25px;
-        margin-top: 1px;
-        margin-left: 5px;
-      }
-      p {
-        margin-top: 0px;
-        font-size: 10px;
-      }
-    }
-  }
-}
-
-@keyframes fadeIn {
-  0% {
-    opacity: 0;
-  }
-
-  100% {
-    opacity: 1;
-  }
-}
-
-@media (max-width: 900px) {
-  .HomePage {
-    width: 95vw;
-    overflow-x: hidden;
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    h4 {
-      color: black;
-    }
-
-    .buttonDiv {
-      top: 20vh;
-      width: 90vw;
-      margin-left: 5vw;
-      border-radius: 3px;
-      height: 15vw;
-      left: 0;
-      flex-direction: row;
-      justify-content: space-evenly;
-      align-items: center;
-      overflow-x: scroll;
-      overflow-y: hidden;
-      h4 {
-        display: none;
-      }
-      li {
-        font-size: 10px;
-        border-radius: 3px;
-        box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px,
-          rgba(0, 0, 0, 0.3) 0px 7px 13px -3px,
-          rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
-      }
-    }
-
-    button {
-      align-self: center;
-    }
-
-    #name {
-    }
-
-    .hidden {
-    }
-
-    .userInfo {
-      margin-left: 0px;
-      top: 12vh;
-      width: 100vw;
-      height: 5vh;
-      display: flex;
-      flex-direction: row;
-      justify-content: space-evenly;
-      align-items: center;
-      .userPic {
+        font-weight: bold;
         height: 5vh;
-        width: 5vh;
-        margin-top: 0;
-        img {
-          height: 5vh;
-          width: 5vh;
+        overflow-x: scroll;
+        -ms-overflow-style: none;
+        scrollbar-width: none;
+        &::-webkit-scrollbar {
+          display: none;
         }
       }
-      .userPic:hover {
-        cursor: pointer;
-      }
-
-      .username {
-        width: 40vw;
+      .userForum {
         display: flex;
-        justify-content: flex-start;
         align-items: center;
-      }
-
-      .userForums {
-        display: none;
-        height: 0;
-        width: 0;
-        li {
-        }
-        li:hover {
-          cursor: pointer;
-        }
-        .forumTitles {
-        }
-      }
-    }
-  }
-}
-
-@media (prefers-color-scheme: dark) {
-  body {
-    background-color: black;
-  }
-  .HomePage {
-    h4 {
-    }
-
-    .buttonDiv {
-      margin-top: -40px;
-      background-color: rgb(28, 28, 28);
-      h4 {
+        justify-content: center;
+        margin-top: 3px;
         color: white;
+        margin-top: 2px;
+        height: 5vh;
+        width: 90%;
+        border-bottom: solid 1px rgb(100, 100, 100);
       }
-      li {
-      }
     }
-
-    button {
-    }
-
-    #name {
-    }
-
-    .hidden {
-    }
-
-    .userInfo {
+  }
+  .homePosts {
+    width: 70vw;
+    max-width: 1500px;
+  }
+  .explore {
+    width: 15vw;
+    height: 60vh;
+    background-color: black;
+    .createPost {
       color: #ff6410;
-      background-color: rgb(28, 28, 28);
-      left: 0px;
-      margin-left: 0px;
-      width: 18vw;
-      .userPic {
+      font-size: 25px;
+      width: 100%;
+      font-weight: bold;
+    }
+    h1 {
+      width: 100%;
+    }
+    .forumList {
+      color: white;
+      height: 60vh;
+      width: 100%;
+      overflow-y: scroll;
+      -ms-overflow-style: none;
+      scrollbar-width: none;
+      &::-webkit-scrollbar {
+        display: none;
       }
 
-      .username {
-      }
-
-      .userForums {
-        width: 16.2vw;
-        h4 {
-          color: white;
-        }
-
-        li {
-        }
-        .forumTitles {
-          color: white;
-        }
+      p {
+        margin-top: 2px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        max-height: 50px;
+        margin-top: 2px;
+        height: 5vh;
+        width: 13vw;
+        border-bottom: solid 1px rgb(100, 100, 100);
       }
     }
   }
 }
 
-@keyframes typing {
-  from {
-    width: 100%;
-  }
+// @keyframes fadeIn {
+//   0% {
+//     opacity: 0;
+//   }
 
-  to {
-    width: 0;
-  }
-}
+//   100% {
+//     opacity: 1;
+//   }
+// }
 
-@keyframes blink-caret {
-  from,
-  to {
-    border-color: transparent;
-  }
-  50% {
-    border-color: #000;
-  }
-}
+// @media (max-width: 900px) {
+//   .HomePage {
+//     width: 95vw;
+//     overflow-x: hidden;
+//     display: flex;
+//     flex-direction: row;
+//     justify-content: flex-start;
+//     h4 {
+//       color: black;
+//     }
+
+//     .buttonDiv {
+//       top: 20vh;
+//       width: 90vw;
+//       margin-left: 5vw;
+//       border-radius: 3px;
+//       height: 15vw;
+//       left: 0;
+//       flex-direction: row;
+//       justify-content: space-evenly;
+//       align-items: center;
+//       overflow-x: scroll;
+//       overflow-y: hidden;
+//       h4 {
+//         display: none;
+//       }
+//       li {
+//         font-size: 10px;
+//         border-radius: 3px;
+//         box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px,
+//           rgba(0, 0, 0, 0.3) 0px 7px 13px -3px,
+//           rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+//       }
+//     }
+
+//     button {
+//       align-self: center;
+//     }
+
+//     #name {
+//     }
+
+//     .hidden {
+//     }
+
+//     .userInfo {
+//       margin-left: 0px;
+//       top: 12vh;
+//       width: 100vw;
+//       height: 5vh;
+//       display: flex;
+//       flex-direction: row;
+//       justify-content: space-evenly;
+//       align-items: center;
+//       .userPic {
+//         height: 5vh;
+//         width: 5vh;
+//         margin-top: 0;
+//         img {
+//           height: 5vh;
+//           width: 5vh;
+//         }
+//       }
+//       .userPic:hover {
+//         cursor: pointer;
+//       }
+
+//       .username {
+//         width: 40vw;
+//         display: flex;
+//         justify-content: flex-start;
+//         align-items: center;
+//       }
+
+//       .userForums {
+//         display: none;
+//         height: 0;
+//         width: 0;
+//         li {
+//         }
+//         li:hover {
+//           cursor: pointer;
+//         }
+//         .forumTitles {
+//         }
+//       }
+//     }
+//   }
+// }
