--- a/src/pages/UserPage/UserPage.module.scss
+++ b/src/pages/UserPage/UserPage.module.scss
@@ -1,5 +1,96 @@
 .UserPage {
+  background-color: rgb(28, 28, 28);
+  height: 100vh;
+  display: flex;
   .heading {
+    height: 10vh;
+    max-height: 60px;
+    font-size: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .userAside {
+    width: 30vw;
+    height: 100%;
+    color: white;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+
+    background-color: black;
+    h1 {
+      height: 10%;
+      width: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 30px;
+      background-color: #ff6410;
+      color: white;
+      font-weight: bold;
+    }
+    #profilePic {
+      width: 150px;
+      height: 150px;
+      border-radius: 100%;
+      border: solid 1px white;
+      margin-top: 20px;
+    }
+    .bio {
+      height: 30%;
+      width: 75%;
+      background-color: rgb(28, 28, 28);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      margin-top: 20px;
+      overflow-y: scroll;
+      -ms-overflow-style: none;
+      scrollbar-width: none;
+      &::-webkit-scrollbar {
+        display: none;
+      }
+    }
+    .functions {
+      width: 90%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      justify-content: space-evenly;
+      height: 10%;
+      margin-top: 20px;
+      border: solid 1px white;
+      border-radius: 5px;
+    }
+  }
+  #posts {
+    justify-content: center;
+    display: flex;
+    align-items: center;
+    color: white;
+    height: 10vh;
+    font-size: 30px;
+    background-color: rgb(28, 28, 28);
+  }
+  .userPosts {
+    h1 {
+      background-color: #ff6410;
+      color: white;
+      width: 100%;
+      height: 100%;
+      font-size: calc(1vw + 1.5vh);
+    }
+    width: 55vw;
+    margin-left: 10vw;
+    height: 100%;
+    overflow-y: scroll;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+    &::-webkit-scrollbar {
+      display: none;
+    }
   }
 }
 
@@ -8,10 +99,10 @@
   }
 }
 
-@media (prefers-color-scheme: dark) {
-  .UserPage {
-    .heading {
-      color: #ff6410;
-    }
-  }
-}
+// @media (prefers-color-scheme: dark) {
+//   .UserPage {
+//     .heading {
+//       color: #ff6410;
+//     }
+//   }
+// }
