--- a/src/pages/PostPage/PostPage.module.scss
+++ b/src/pages/PostPage/PostPage.module.scss
@@ -58,7 +58,13 @@
       cursor: pointer;
     }
     p {
-      background-color: aquamarine;
+      background-color: rgb(190, 190, 190);
+      width: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      color: white;
+      font-size: calc(1vw + 1.5vh);
     }
     img {
       width: 50vw;
